Fixing layout issue on intelligence control. Scrolling to active feed on intelligence change.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -3680,7 +3680,7 @@ form.opml_import_form input {
     text-transform: uppercase;
     text-shadow: 0 1px 0 #C8C8C8;
     text-align: center;
-    line-height: 16px;
+    line-height: 17px;
     position: relative;
     padding: 0 8px;
 }
